--- a/minor_project/lanes.ipynb
+++ b/minor_project/lanes.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "STEP2 :Nise reduction"
+    "STEP2 :Noise reduction"
    ]
   },
   {
